# funnel-program

./: .gitignore  README.md
clients/js/: README.md  package.json
clients/js/test/: increment.test.ts
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
clients/rust/tests/: create.rs
program/: Cargo.toml  idl.json
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs
program/tests/: distribute_rewards.rs  setup.rs
scripts/: clone-programs.mjs  generate-clients.mjs
