[package]
name = "paladin-funnel-program"
version = "0.1.0"
description = "Paladin Funnel Program"
readme = "./README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.0.2"
spl-program-error = "0.5.0"

[dev-dependencies]
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "Dbf7u6x15DhjMrBMunY3XoRWdByrCCt2dbyoPrCXN6SQ"
