[package]
name = "paladin-funnel-program"
version = "0.0.1"
description = "Paladin Funnel Program"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
shank = "0.4.2"
solana-program = "2.0.2"
spl-program-error = "0.5.0"

[dev-dependencies]
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "CF2na53jt22yAQpkw2Uqc1KSNyfiR5p1NzV9XGUa7UbR"
