[package]
name = "paladin-funnel-program"
version = "0.0.1"
description = "Paladin Funnel Program"
readme = "../README.md"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
num-derive = "0.3"
num-traits = "0.2"
paladin-governance-program-client = { git = "https://github.com/paladin-bladesmith/governance-program.git" }
paladin-rewards-program-client = { git = "https://github.com/paladin-bladesmith/rewards-program.git" }
paladin-stake-program-client = { git = "https://github.com/paladin-bladesmith/stake-program.git" }
shank = "0.4.2"
solana-program = "2.0.2"
thiserror = "1.0"

[dev-dependencies]
borsh = "^0.10"
proptest = "1.5.0"
solana-program-test = "2.0.2"
solana-sdk = "2.0.2"
spl-token-2022 = "4.0.0"
test-case = "3.3.1"

[features]
bpf-entrypoint = []
test-sbf = []

[package.metadata.solana]
program-id = "Dbf7u6x15DhjMrBMunY3XoRWdByrCCt2dbyoPrCXN6SQ"
